# gst-plugins-dvswitch

./: .gitignore  AUTHORS  ChangeLog  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules  watch
debian/patches/: link-fix.diff  series  update-authors.diff
src/: Makefile.am  gstdvswitchsink.c  gstdvswitchsink.h  gstdvswitchsrc.c  gstdvswitchsrc.h  plugin.c
